apps/bux-wallet/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bux-wallet-frontend-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bux-wallet-frontend-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bux-wallet-frontend-demo
    spec:
      imagePullSecrets:
        - name: 4chainregistry
      containers:
        - name: bux-wallet-frontend-demo
          image: 4chain/bux-wallet-frontend:0.8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
