apps/bux-wallet/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bux-wallet-frontend-demo
  labels:
    app.kubernetes.io/name: bux-wallet-frontend
    app.kubernetes.io/instance: bux-wallet-frontend-demo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: bux-wallet
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: bux-wallet-frontend-demo
  type: ClusterIP
  ports:
    - name: web
      port: 5000
      targetPort: web
